--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -266,8 +266,14 @@ crossorigin=""/>
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
 	        <tr>
-	            <th>Catégories</th>
-	            <th>Produits Finis</th>
+	            <th>
+		            <span lang="fr">Catégorie</span>
+		        	<span lang="en">Category</span>
+		        </th>
+	            <th>
+	            	<span lang="fr">Type de produits</span>
+		        	<span lang="en">Product type</span>
+		        </th>
 	        </tr>
 	   </thead>     
         <tr>
@@ -278,16 +284,25 @@ crossorigin=""/>
             </td> 
         </tr>
         <tr>
-            <td><span></span>2</td>
-            <td><span></span>Déodorants et antiperspirants</td> 
+            <td>2</td>
+            <td>
+            	<span lang="fr">Produits pour les aisselles</span>
+            	<span lang="en">Products applied to the axillae</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>3</td>
-            <td><span></span>Produits hydroalcoliques pour peaux rasées (eaux de toilette, parfums, produits pour les yeux, crèmes et baumes pour le visage, tampons)</td> 
+            <td>3</td>
+            <td>
+            	<span lang="fr">Produits appliqués sur le visage et le coprs en utilisant le bout des doigts</span>
+            	<span lang="en">Products applied to the face/body using fingertips</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>4</td>
-            <td><span></span>Produits hydroalcoliques pour peaux non rasées (eaux de toilette, papiers parfumés, parfums, aide à la coiffe, sprays pour les cheveux, crèmes, lotions, gels et huiles pour le corps, produits pour les pieds, crèmes parfumantes)</td> 
+            <td>4</td>
+            <td>
+            	<span lang="fr">Produits de Fine Fragrance</span>
+            	<span lang="en">Products related to Fine Fragrance</span>
+            </td> 
         </tr>
         <tr>
             <td><span></span>5</td>
