--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -305,9 +305,41 @@ crossorigin=""/>
             </td> 
         </tr>
         <tr>
-            <td><span></span>5</td>
-            <td><span></span>Crèmes pour les mains</td> 
+            <td>5</td>
+            <td>
+            	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
+            	<span lang="en">Products applied to the face/body using the hands (palms), primarily leave-on</span>
+            </td> 
         </tr>
+          <tr>
+            <td>5A</td>
+            <td>
+            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
+            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
+            </td> 
+        </tr>
+          <tr>
+            <td>5B</td>
+            <td>
+            	<span lang="fr">Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)</span>
+            	<span lang="en">Face moisturizer products applied to the face using the hands (palms), primarily leave on</span>
+            </td> 
+        </tr>
+          <tr>
+            <td>5C</td>
+            <td>
+            	<span lang="fr">Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)</span>
+            	<span lang="en">Hand cream products applied to the hands using the hands (palms), primarily leave on</span>
+            </td> 
+        </tr>
+          <tr>
+            <td>5D</td>
+            <td>
+            	<span lang="fr">Crèmes pour bébés, huiles pour bébés et talc pour bébés</span>
+            	<span lang="en">Baby Creams, baby Oils and baby talc</span>
+            </td> 
+        </tr>
+
         <tr>
             <td><span></span>6</td>
             <td><span></span>Produits buccodentaires</td> 
