--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -308,7 +308,7 @@ crossorigin=""/>
             <td>5</td>
             <td>
             	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
-            	<span lang="en">Products applied to the face/body using the hands (palms), primarily leave-on</span>
+            	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
             </td> 
         </tr>
           <tr>
@@ -339,30 +339,96 @@ crossorigin=""/>
             	<span lang="en">Baby Creams, baby Oils and baby talc</span>
             </td> 
         </tr>
-
         <tr>
-            <td><span></span>6</td>
-            <td><span></span>Produits buccodentaires</td> 
+            <td>6</td>
+            <td>
+            	<span lang="fr">Produits avec exposition orale et labiale</span>
+            	<span lang="en">Products with oral and lip exposure</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>7</td>
-            <td><span></span>Lingettes intimes, lingettes bébé, insecticides pour la peau</td> 
+            <td>7</td>
+            <td>
+            	<span lang="fr">Produits appliqués sur les cheveux avec contact des mains</span>
+            	<span lang="en">Products applied to the hair with some hand contact</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>8</td>
-            <td><span></span>Démaquillants, aide à la coiffe sans spray, produits pour les ongles, poudres et talcs</td> 
+            <td>7A</td>
+            <td>
+            	<span lang="fr">Produits rincés appliqués sur les cheveux avec contact des mains</span>
+            	<span lang="en">Rinse-off Products applied to the hair with some hand contact</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>9</td>
-            <td><span></span>Produits rincés (savons liquides, dépilatoires, après-shampoings, shampoings, soins visage, après rasage, mousse à raser, gels douches, produits pour le corps, serviettes hygiéniques, autres aérosols)</td> 
+            <td>7B</td>
+            <td>
+            	<span lang="fr">Produits non-rincés appliqués sur les cheveux avec contact des mains</span>
+            	<span lang="en">Leave-on products applied to the hair with some hand contact</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>10</td>
-            <td><span></span>Produits ménagers (lessives en poudre et liquides, autres détergents, produits de lavage à sec, assouplissants, produits de vaisselle à la main, nettoyant pour sols, shampoings pour animaux, couches, lingettes pour toilettes)</td> 
+            <td>8</td>
+            <td>
+            	<span lang="fr">Produits présentant une exposition anogénitale significative</span>
+            	<span lang="en">Products with significant anogenital exposure</span>
+            </td> 
         </tr>
         <tr>
-            <td><span></span>11</td>
-            <td><span></span>Produits sans contact avec la peau (désodorisants, blocs pour toilette, insecticides, baton d'encens, objets en plastique, bougies, essence, peinture, cire pour le sol, produits pour lave-vaisselle, parfums de linge, sachets parfumants, cirage, litiaires, sprays pour animaux, soins textiles, eaux parfumantes pour repassage)</td> 
+            <td>9</td>
+            <td>
+            	<span lang="fr">Produits appliqués sur le visage ou le corps (produits rinçés)</span>
+            	<span lang="en">Products with body and hand exposure, primarily rinse off</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>
+            	<span lang="fr">Produits d'entretien ménager avec un contact main eventuel</span>
+            	<span lang="en">Household care products with mostly hand contact</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>10A</td>
+            <td>
+            	<span lang="fr">Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)</span>
+            	<span lang="en">Household care excluding aerosol products (excluding aerosol/spray products)</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>10B</td>
+            <td>
+            	<span lang="fr">Produits de sprays et aérosols ménager</span>
+            	<span lang="en">Household aerosol/spray products</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>
+            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte</span>
+            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>11A</td>
+            <td>
+            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV</span>
+            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>11B</td>
+            <td>
+            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV</span>
+            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure</span>
+            </td> 
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>
+            	<span lang="fr">Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau</span>
+            	<span lang="en">Products not intended for direct skin contact, minimal or insignificant transfer to skin</span>
+            </td> 
         </tr>
   	</table> 
 	</div>
