--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -262,7 +262,7 @@ crossorigin=""/>
 		</ol>
 	</p>
 	<div class="row col-12" style="text-align: center; align-items: center; font-size: 0.8em"> 
-	<table class="offset-2 col-8">
+	<table class="categorieifra offset-2 col-8">
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
 	        <tr>
