--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,7 +261,7 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row col-12" style="text-align: center; align-items: center; font-size: 0.8em"> 
+	<div class="row col-12" style="font-size: 0.8em"> 
 	<table class="categorieifra offset-2 col-8" style="text-align: right;">
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
