--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -311,7 +311,7 @@ crossorigin=""/>
             	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
             </td> 
         </tr>
-          <tr>
+          <tr style="background-color: white;">
             <td>5A</td>
             <td>
             	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
