--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,7 +261,7 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row col-12" style="font-size: 0.8em; background-color: blue;"> 
+	<div class="row" style="font-size: 0.8em; background-color: blue;"> 
 	<table class="categorieifra col-8" style="align-items: right;">
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
