--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,177 +261,178 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row" style="font-size: 0.8em; background-color: blue;"> 
-	<table class="categorieifra col-8" style="align-items: right;">
-   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
-	   <thead>
+	<div class="row" style="font-size: 0.8em; background-color: blue;">
+	<div class="col-12">
+		<table class="categorieifra col-8" style="align-items: right;">
+	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
+		   <thead>
+		        <tr>
+		            <th>
+			            <span lang="fr">Catégorie</span>
+			        	<span lang="en">Category</span>
+			        </th>
+		            <th>
+		            	<span lang="fr">Type de produits</span>
+			        	<span lang="en">Product type</span>
+			        </th>
+		        </tr>
+		   </thead>     
 	        <tr>
-	            <th>
-		            <span lang="fr">Catégorie</span>
-		        	<span lang="en">Category</span>
-		        </th>
-	            <th>
-	            	<span lang="fr">Type de produits</span>
-		        	<span lang="en">Product type</span>
-		        </th>
+	            <td>1</td>
+	            <td>
+	            	<span lang="fr">Produit pour les lèvres</span>
+	            	<span lang="en">Products applied to the lips</span>
+	            </td> 
 	        </tr>
-	   </thead>     
-        <tr>
-            <td>1</td>
-            <td>
-            	<span lang="fr">Produit pour les lèvres</span>
-            	<span lang="en">Products applied to the lips</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>
-            	<span lang="fr">Produits pour les aisselles</span>
-            	<span lang="en">Products applied to the axillae</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>
-            	<span lang="fr">Produits appliqués sur le visage et le coprs en utilisant le bout des doigts</span>
-            	<span lang="en">Products applied to the face/body using fingertips</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>
-            	<span lang="fr">Produits de Fine Fragrance</span>
-            	<span lang="en">Products related to Fine Fragrance</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>
-            	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
-            	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
-            </td> 
-        </tr>
-          <tr style="background-color: white;">
-            <td>5A</td>
-            <td>
-            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
-            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
-            </td> 
-        </tr>
-          <tr>
-            <td>5B</td>
-            <td>
-            	<span lang="fr">Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)</span>
-            	<span lang="en">Face moisturizer products applied to the face using the hands (palms), primarily leave on</span>
-            </td> 
-        </tr>
-          <tr>
-            <td>5C</td>
-            <td>
-            	<span lang="fr">Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)</span>
-            	<span lang="en">Hand cream products applied to the hands using the hands (palms), primarily leave on</span>
-            </td> 
-        </tr>
-          <tr>
-            <td>5D</td>
-            <td>
-            	<span lang="fr">Crèmes pour bébés, huiles pour bébés et talc pour bébés</span>
-            	<span lang="en">Baby Creams, baby Oils and baby talc</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>
-            	<span lang="fr">Produits avec exposition orale et labiale</span>
-            	<span lang="en">Products with oral and lip exposure</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>
-            	<span lang="fr">Produits appliqués sur les cheveux avec contact des mains</span>
-            	<span lang="en">Products applied to the hair with some hand contact</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>7A</td>
-            <td>
-            	<span lang="fr">Produits rincés appliqués sur les cheveux avec contact des mains</span>
-            	<span lang="en">Rinse-off Products applied to the hair with some hand contact</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>7B</td>
-            <td>
-            	<span lang="fr">Produits non-rincés appliqués sur les cheveux avec contact des mains</span>
-            	<span lang="en">Leave-on products applied to the hair with some hand contact</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>8</td>
-            <td>
-            	<span lang="fr">Produits présentant une exposition anogénitale significative</span>
-            	<span lang="en">Products with significant anogenital exposure</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>9</td>
-            <td>
-            	<span lang="fr">Produits appliqués sur le visage ou le corps (produits rinçés)</span>
-            	<span lang="en">Products with body and hand exposure, primarily rinse off</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>10</td>
-            <td>
-            	<span lang="fr">Produits d'entretien ménager avec un contact main eventuel</span>
-            	<span lang="en">Household care products with mostly hand contact</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>10A</td>
-            <td>
-            	<span lang="fr">Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)</span>
-            	<span lang="en">Household care excluding aerosol products (excluding aerosol/spray products)</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>10B</td>
-            <td>
-            	<span lang="fr">Produits de sprays et aérosols ménager</span>
-            	<span lang="en">Household aerosol/spray products</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>11</td>
-            <td>
-            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte</span>
-            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>11A</td>
-            <td>
-            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV</span>
-            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>11B</td>
-            <td>
-            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV</span>
-            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure</span>
-            </td> 
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>
-            	<span lang="fr">Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau</span>
-            	<span lang="en">Products not intended for direct skin contact, minimal or insignificant transfer to skin</span>
-            </td> 
-        </tr>
-  	</table> 
-	</div>
+	        <tr>
+	            <td>2</td>
+	            <td>
+	            	<span lang="fr">Produits pour les aisselles</span>
+	            	<span lang="en">Products applied to the axillae</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>3</td>
+	            <td>
+	            	<span lang="fr">Produits appliqués sur le visage et le coprs en utilisant le bout des doigts</span>
+	            	<span lang="en">Products applied to the face/body using fingertips</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>4</td>
+	            <td>
+	            	<span lang="fr">Produits de Fine Fragrance</span>
+	            	<span lang="en">Products related to Fine Fragrance</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>5</td>
+	            <td>
+	            	<span lang="fr">Produits appliqués sur le visage et le corps en utilisant la paume de la main, (produits sans rinçage)</span>
+	            	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
+	            </td> 
+	        </tr>
+	          <tr style="background-color: white;">
+	            <td>5A</td>
+	            <td>
+	            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
+	            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
+	            </td> 
+	        </tr>
+	          <tr>
+	            <td>5B</td>
+	            <td>
+	            	<span lang="fr">Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)</span>
+	            	<span lang="en">Face moisturizer products applied to the face using the hands (palms), primarily leave on</span>
+	            </td> 
+	        </tr>
+	          <tr>
+	            <td>5C</td>
+	            <td>
+	            	<span lang="fr">Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)</span>
+	            	<span lang="en">Hand cream products applied to the hands using the hands (palms), primarily leave on</span>
+	            </td> 
+	        </tr>
+	          <tr>
+	            <td>5D</td>
+	            <td>
+	            	<span lang="fr">Crèmes pour bébés, huiles pour bébés et talc pour bébés</span>
+	            	<span lang="en">Baby Creams, baby Oils and baby talc</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>6</td>
+	            <td>
+	            	<span lang="fr">Produits avec exposition orale et labiale</span>
+	            	<span lang="en">Products with oral and lip exposure</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>7</td>
+	            <td>
+	            	<span lang="fr">Produits appliqués sur les cheveux avec contact des mains</span>
+	            	<span lang="en">Products applied to the hair with some hand contact</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>7A</td>
+	            <td>
+	            	<span lang="fr">Produits rincés appliqués sur les cheveux avec contact des mains</span>
+	            	<span lang="en">Rinse-off Products applied to the hair with some hand contact</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>7B</td>
+	            <td>
+	            	<span lang="fr">Produits non-rincés appliqués sur les cheveux avec contact des mains</span>
+	            	<span lang="en">Leave-on products applied to the hair with some hand contact</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>8</td>
+	            <td>
+	            	<span lang="fr">Produits présentant une exposition anogénitale significative</span>
+	            	<span lang="en">Products with significant anogenital exposure</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>9</td>
+	            <td>
+	            	<span lang="fr">Produits appliqués sur le visage ou le corps (produits rinçés)</span>
+	            	<span lang="en">Products with body and hand exposure, primarily rinse off</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>10</td>
+	            <td>
+	            	<span lang="fr">Produits d'entretien ménager avec un contact main eventuel</span>
+	            	<span lang="en">Household care products with mostly hand contact</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>10A</td>
+	            <td>
+	            	<span lang="fr">Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)</span>
+	            	<span lang="en">Household care excluding aerosol products (excluding aerosol/spray products)</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>10B</td>
+	            <td>
+	            	<span lang="fr">Produits de sprays et aérosols ménager</span>
+	            	<span lang="en">Household aerosol/spray products</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>11</td>
+	            <td>
+	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte</span>
+	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>11A</td>
+	            <td>
+	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV</span>
+	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>11B</td>
+	            <td>
+	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV</span>
+	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure</span>
+	            </td> 
+	        </tr>
+	        <tr>
+	            <td>12</td>
+	            <td>
+	            	<span lang="fr">Produits non destinés à un contact direct avec la peau, transfert minimal ou insignifiant sur la peau</span>
+	            	<span lang="en">Products not intended for direct skin contact, minimal or insignificant transfer to skin</span>
+	            </td> 
+	        </tr>
+	  	</table> 
+	</div></div>
 	<p>
 		<span lang="fr">Pour en savoir d’avantage sur les spécificités de chacunes de ces categories, nous vous invitons à vous référer aux <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of Ifra Standard</a></span>
 		<span lang="en">To get to know more about these categories, please refer to the <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of IFRA Standards</a></span>
