--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,9 +261,9 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row" style="font-size: 0.8em; background-color: blue;">
+	<div class="row" style="font-size: 0.8em;">
 	<div class="col-12">
-		<table class="categorieifra col-7" style="align-items: right;">
+		<table class="categorieifra col-7" style="align-items: right; background-color: blue;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
 		        <tr>
