--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -463,7 +463,10 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1">IFRA</h4>
+  <h4 class="gros_titre text-in-color-brown">
+  	<span lang="fr">IFRA - Les ingrédients interdits</span>
+  	<span lang="en">IFRA - Prohibited ingredients</span>
+  </h4>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
@@ -471,7 +474,7 @@ crossorigin=""/>
  <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
  <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
-<div class="table-responsive-sm col-12">
+<div class="table-responsive col-12">
   <table class="col-12 align-items-center" style="width:100%">
     <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
       <thead>
