--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -463,7 +463,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="gros_titre text-in-color-brown">
+  <h4 class="gros_titre text-in-color-brown text-center">
   	<span lang="fr">IFRA - Les ingrédients interdits</span>
   	<span lang="en">IFRA - Prohibited ingredients</span>
   </h4>
