--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -458,7 +458,7 @@ crossorigin=""/>
 
 <!--MODAL IFRA -->
 <div class="modal" tabindex="-1" role="dialog" id="ifra_modal">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
