--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -469,7 +469,7 @@ crossorigin=""/>
   </h4>
 </div>
 
-<div class="modal-body text-size-14px text-justify scrollbar-inside2">
+<div class="modal-body text-justify scrollbar-inside2" style="font-size: 0.8em;">
 
  <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
  <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
