--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -469,12 +469,12 @@ crossorigin=""/>
   </h4>
 </div>
 
-<div class="modal-body text-justify scrollbar-inside2" style="font-size: 0.8em;">
+<div class="modal-body text-justify scrollbar-inside2">
 
  <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
  <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
-<div class="table-responsive col-12">
+<div class="table-responsive col-12" style="font-size: 0.8em;">
   <table class="col-12 align-items-center" style="width:100%">
     <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
       <thead>
