--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -216,7 +216,7 @@ crossorigin=""/>
 				<span lang="en">Prohibitive Standards : </span>
 			</li>
 			<span lang="fr">Ce type de standard interdit l’utilisation d’un produit car le cadre d’une composition parfumée. A ce jour, prêt de <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">66 ingrédients ou groupes d’ingrédients interdits</a>. </span>
-			<span lang="en">This type of standard prohibits the use of an ingredient in a perfume product. Today, 66 ingredients or groups of ingredients are prohibited.</span>
+			<span lang="en">This type of standard prohibits the use of an ingredient in a perfume product. Today, <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">66 ingredients or groups of ingredients are prohibited</a>.</span>
 
 			<li class="catégories2">
 				<span lang="fr">Standard Spécificatif :  </span>
@@ -263,7 +263,7 @@ crossorigin=""/>
 	</p>
 	<div class="row" style="font-size: 0.8em;">
 	<div class="col-12 categorieifra">
-		<table class="col-7" style="align-items: right; background-color: blue;">
+		<table class="col-7" style="align-items: right;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
 		        <tr>
@@ -779,6 +779,11 @@ crossorigin=""/>
           <tr>
               <td>7-Methylcoumarin</td>
               <td>2445-83-2</td>
+              <td></td> 
+          </tr>
+          <tr>
+              <td>Methyl crotonate</td>
+              <td>623-43-8</td>
               <td></td> 
           </tr>
           <tr>
