--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -5,12 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<link rel="canonical" href="https://www.scentree.co/_/allergenes.html" />
+<link rel="canonical" href="https://www.scentree.co/_/IFRA.html" />
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - The allergens_Les allergènes</title>
-<title lang="en">ScenTree - The allergens_Les allergènes</title>
+<title>ScenTree - IFRA</title>
 <!--Description Google-->
 <meta name="description" lang="fr" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
 <meta name="description" lang="en" content="Linalool, Limonene, Eugenol, Benzyl Salicylate, so many chemical molecules in your perfumes ? ... Come and discover the secrets of these demonized ingredients." />
@@ -262,7 +261,6 @@ crossorigin=""/>
 		</ol>
 	</p>
 	<div class="row" style="font-size: 0.8em;">
-	<div class="col-12 categorieifra">
 		<table class="col-7" style="align-items: right;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
@@ -312,8 +310,8 @@ crossorigin=""/>
 	            	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
 	            </td> 
 	        </tr>
-	          <tr style="background-color: white;">
-	            <td>5A</td>
+	          <tr>
+	            <td style="text-align: center;">5A</td>
 	            <td>
 	            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
@@ -432,7 +430,7 @@ crossorigin=""/>
 	            </td> 
 	        </tr>
 	  	</table> 
-	</div></div>
+	</div>
 	<p>
 		<span lang="fr">Pour en savoir d’avantage sur les spécificités de chacunes de ces categories, nous vous invitons à vous référer aux <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of Ifra Standard</a></span>
 		<span lang="en">To get to know more about these categories, please refer to the <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of IFRA Standards</a></span>
