--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,7 +261,7 @@ crossorigin=""/>
 		</ol>
 	</p>
 	<div class="row" style="font-size: 0.8em;">
-		<table class="col-7" style="align-items: right;">
+		<table class="col-7 categorieifra" style="align-items: right;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
 		        <tr>
