--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -260,7 +260,7 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row" style="font-size: 0.8em;">
+	<div class="row col-12" style="font-size: 0.8em;">
 		<table class="col-7 categorieifra" style="align-items: right;">
 	   	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 		   <thead>
@@ -318,21 +318,21 @@ crossorigin=""/>
 	            </td> 
 	        </tr>
 	          <tr>
-	            <td>5B</td>
+	            <td style="text-align: center;">5B</td>
 	            <td>
 	            	<span lang="fr">Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Face moisturizer products applied to the face using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
 	          <tr>
-	            <td>5C</td>
+	            <td style="text-align: center;">5C</td>
 	            <td>
 	            	<span lang="fr">Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Hand cream products applied to the hands using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
 	          <tr>
-	            <td>5D</td>
+	            <td style="text-align: center;">5D</td>
 	            <td>
 	            	<span lang="fr">Crèmes pour bébés, huiles pour bébés et talc pour bébés</span>
 	            	<span lang="en">Baby Creams, baby Oils and baby talc</span>
@@ -353,14 +353,14 @@ crossorigin=""/>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>7A</td>
+	            <td style="text-align: center;">7A</td>
 	            <td>
 	            	<span lang="fr">Produits rincés appliqués sur les cheveux avec contact des mains</span>
 	            	<span lang="en">Rinse-off Products applied to the hair with some hand contact</span>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>7B</td>
+	            <td style="text-align: center;">7B</td>
 	            <td>
 	            	<span lang="fr">Produits non-rincés appliqués sur les cheveux avec contact des mains</span>
 	            	<span lang="en">Leave-on products applied to the hair with some hand contact</span>
@@ -388,14 +388,14 @@ crossorigin=""/>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>10A</td>
+	            <td style="text-align: center;">10A</td>
 	            <td>
 	            	<span lang="fr">Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)</span>
 	            	<span lang="en">Household care excluding aerosol products (excluding aerosol/spray products)</span>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>10B</td>
+	            <td style="text-align: center;">10B</td>
 	            <td>
 	            	<span lang="fr">Produits de sprays et aérosols ménager</span>
 	            	<span lang="en">Household aerosol/spray products</span>
@@ -409,14 +409,14 @@ crossorigin=""/>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>11A</td>
+	            <td style="text-align: center;">11A</td>
 	            <td>
 	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV</span>
 	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure</span>
 	            </td> 
 	        </tr>
 	        <tr>
-	            <td>11B</td>
+	            <td style="text-align: center;">11B</td>
 	            <td>
 	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV</span>
 	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate with potential UV exposure</span>
