--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -310,28 +310,28 @@ crossorigin=""/>
 	            	<span lang="en">Products applied to the face and body using the hands (palms), primarily leave-on</span>
 	            </td> 
 	        </tr>
-	          <tr>
+	          <tr style="background-color: white;">
 	            <td style="text-align: center;">5A</td>
 	            <td>
 	            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
-	          <tr>
+	          <tr style="background-color: white;">
 	            <td style="text-align: center;">5B</td>
 	            <td>
 	            	<span lang="fr">Produits hydratants pour le visage appliqués sur le visage en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Face moisturizer products applied to the face using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
-	          <tr>
+	          <tr style="background-color: white;">
 	            <td style="text-align: center;">5C</td>
 	            <td>
 	            	<span lang="fr">Crèmes pour les mains appliqués sur les mains en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Hand cream products applied to the hands using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
-	          <tr>
+	          <tr style="background-color: white;">
 	            <td style="text-align: center;">5D</td>
 	            <td>
 	            	<span lang="fr">Crèmes pour bébés, huiles pour bébés et talc pour bébés</span>
@@ -352,14 +352,14 @@ crossorigin=""/>
 	            	<span lang="en">Products applied to the hair with some hand contact</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">7A</td>
 	            <td>
 	            	<span lang="fr">Produits rincés appliqués sur les cheveux avec contact des mains</span>
 	            	<span lang="en">Rinse-off Products applied to the hair with some hand contact</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">7B</td>
 	            <td>
 	            	<span lang="fr">Produits non-rincés appliqués sur les cheveux avec contact des mains</span>
@@ -387,14 +387,14 @@ crossorigin=""/>
 	            	<span lang="en">Household care products with mostly hand contact</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">10A</td>
 	            <td>
 	            	<span lang="fr">Produits d'entretien ménager à l'exclusion des produits en aérosol (à l'exclusion des produits en aérosol/pulvérisation)</span>
 	            	<span lang="en">Household care excluding aerosol products (excluding aerosol/spray products)</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">10B</td>
 	            <td>
 	            	<span lang="fr">Produits de sprays et aérosols ménager</span>
@@ -408,14 +408,14 @@ crossorigin=""/>
 	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">11A</td>
 	            <td>
 	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte sans exposition UV</span>
 	            	<span lang="en">Products with intended skin contact but minimal transfer of fragrance to skin from inert substrate without UV exposure</span>
 	            </td> 
 	        </tr>
-	        <tr>
+	        <tr style="background-color: white;">
 	            <td style="text-align: center;">11B</td>
 	            <td>
 	            	<span lang="fr">Produits destinés à entrer en contact avec la peau, mais avec un transfert minimal de parfum sur la peau à partir d'un substrat inerte avec exposition UV</span>
