--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -313,7 +313,7 @@ crossorigin=""/>
 	          <tr style="background-color: white;">
 	            <td style="text-align: center;">5A</td>
 	            <td>
-	            	<span lang="fr">Lotion pour le coprs appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
+	            	<span lang="fr">Lotion pour le corps appliquée en utilisant la paume de la main, (produits sans rinçage)</span>
 	            	<span lang="en">Body lotion products applied to the body using the hands (palms), primarily leave on</span>
 	            </td> 
 	        </tr>
